Expand base pom.